--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -1,11 +1,11 @@
 ---
-import { getLanguageFromURL, KNOWN_LANGUAGE_CODES } from '../../languages';
-import { SITE } from '../../consts';
-import AstroLogo from './AstroLogo.astro';
-import SkipToContent from './SkipToContent.astro';
-import SidebarToggle from './SidebarToggle';
-import LanguageSelect from './LanguageSelect';
-import Search from './Search';
+import { getLanguageFromURL, KNOWN_LANGUAGE_CODES } from "../../languages";
+import { SITE } from "../../consts";
+import AstroLogo from "./AstroLogo.astro";
+import SkipToContent from "./SkipToContent.astro";
+import SidebarToggle from "./SidebarToggle";
+import LanguageSelect from "./LanguageSelect";
+import Search from "./Search";
 
 type Props = {
 	currentPage: string;
@@ -24,11 +24,15 @@ const lang = getLanguageFromURL(currentPage);
 		<div class="logo flex">
 			<a href="/">
 				<AstroLogo size={40} />
-				<h1>{SITE.title ?? 'Documentation'}</h1>
+				<h1>{SITE.title ?? "Documentation"}</h1>
 			</a>
 		</div>
 		<div style="flex-grow: 1;"></div>
-		{KNOWN_LANGUAGE_CODES.length > 1 && <LanguageSelect lang={lang} client:idle />}
+		{
+			KNOWN_LANGUAGE_CODES.length > 1 && (
+				<LanguageSelect lang={lang} client:idle />
+			)
+		}
 		<div class="search-item">
 			<Search client:idle />
 		</div>
@@ -85,7 +89,7 @@ const lang = getLanguageFromURL(currentPage);
 		display: none;
 		font: inherit;
 		color: inherit;
-		margin: 0;
+		margin: 0.5;
 	}
 
 	.nav-wrapper {
