--- a/src/components/RightSidebar/MoreMenu.astro
+++ b/src/components/RightSidebar/MoreMenu.astro
@@ -1,6 +1,6 @@
 ---
-import ThemeToggleButton from './ThemeToggleButton';
-import { COMMUNITY_INVITE_URL } from '../../consts';
+import ThemeToggleButton from "./ThemeToggleButton";
+import { COMMUNITY_INVITE_URL } from "../../consts";
 
 type Props = {
 	editHref: string;
@@ -59,7 +59,7 @@ const showMoreSection = Boolean(COMMUNITY_INVITE_URL);
 							d="M448 0H64C28.7 0 0 28.7 0 64v288c0 35.3 28.7 64 64 64h96v84c0 9.8 11.2 15.5 19.1 9.7L304 416h144c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64z"
 						/>
 					</svg>
-					<span>Join our community</span>
+					<span>Join V lang community</span>
 				</a>
 			</li>
 		)
