--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -1,13 +1,13 @@
 ---
-import { getLanguageFromURL } from '../../languages';
-import { SIDEBAR } from '../../consts';
+import { getLanguageFromURL } from "../../languages";
+import { SIDEBAR } from "../../consts";
 
 type Props = {
 	currentPage: string;
 };
 
 const { currentPage } = Astro.props;
-const currentPageMatch = currentPage.endsWith('/')
+const currentPageMatch = currentPage.endsWith("/")
 	? currentPage.slice(1, -1)
 	: currentPage.slice(1);
 const langCode = getLanguageFromURL(currentPage);
@@ -20,13 +20,20 @@ const sidebar = SIDEBAR[langCode];
 			Object.entries(sidebar).map(([header, children]) => (
 				<li>
 					<div class="nav-group">
-						<h2>{header}</h2>
+						<h4>{header}</h4>
 						<ul>
 							{children.map((child) => {
 								const url = Astro.site?.pathname + child.link;
 								return (
 									<li class="nav-link">
-										<a href={url} aria-current={currentPageMatch === child.link ? 'page' : false}>
+										<a
+											href={url}
+											aria-current={
+												currentPageMatch === child.link
+													? "page"
+													: false
+											}
+										>
 											{child.text}
 										</a>
 									</li>
@@ -41,10 +48,10 @@ const sidebar = SIDEBAR[langCode];
 </nav>
 
 <script is:inline>
-	window.addEventListener('DOMContentLoaded', () => {
+	window.addEventListener("DOMContentLoaded", () => {
 		var target = document.querySelector('[aria-current="page"]');
 		if (target && target.offsetTop > window.innerHeight - 100) {
-			document.querySelector('.nav-groups').scrollTop = target.offsetTop;
+			document.querySelector(".nav-groups").scrollTop = target.offsetTop;
 		}
 	});
 </script>
@@ -99,7 +106,7 @@ const sidebar = SIDEBAR[langCode];
 		background-color: var(--theme-bg-hover);
 	}
 
-	.nav-link a[aria-current='page'] {
+	.nav-link a[aria-current="page"] {
 		color: var(--theme-text-accent);
 		background-color: var(--theme-bg-accent);
 		font-weight: 600;
@@ -113,7 +120,7 @@ const sidebar = SIDEBAR[langCode];
 </style>
 
 <style is:global>
-	:root.theme-dark .nav-link a[aria-current='page'] {
+	:root.theme-dark .nav-link a[aria-current="page"] {
 		color: hsla(var(--color-base-white), 100%, 1);
 	}
 </style>
