--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,23 +1,23 @@
 ---
-import type { MarkdownHeading } from 'astro';
-import type { CollectionEntry } from 'astro:content';
-import HeadCommon from '../components/HeadCommon.astro';
-import HeadSEO from '../components/HeadSEO.astro';
-import Header from '../components/Header/Header.astro';
-import PageContent from '../components/PageContent/PageContent.astro';
-import LeftSidebar from '../components/LeftSidebar/LeftSidebar.astro';
-import RightSidebar from '../components/RightSidebar/RightSidebar.astro';
-import Footer from '../components/Footer/Footer.astro';
-import { GITHUB_EDIT_URL, SITE } from '../consts';
+import type { MarkdownHeading } from "astro";
+import type { CollectionEntry } from "astro:content";
+import HeadCommon from "../components/HeadCommon.astro";
+import HeadSEO from "../components/HeadSEO.astro";
+import Header from "../components/Header/Header.astro";
+import PageContent from "../components/PageContent/PageContent.astro";
+import LeftSidebar from "../components/LeftSidebar/LeftSidebar.astro";
+import RightSidebar from "../components/RightSidebar/RightSidebar.astro";
+import Footer from "../components/Footer/Footer.astro";
+import { GITHUB_EDIT_URL, SITE } from "../consts";
 
-type Props = CollectionEntry<'docs'>['data'] & {
+type Props = CollectionEntry<"docs">["data"] & {
 	headings: MarkdownHeading[];
 };
 
 const { headings, ...data } = Astro.props;
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const currentPage = Astro.url.pathname;
-const currentFile = `src/content/docs${currentPage.replace(/\/$/, '')}.md`;
+const currentFile = `src/content/docs${currentPage.replace(/\/$/, "")}.md`;
 const githubEditUrl = `${GITHUB_EDIT_URL}/${currentFile}`;
 ---
 
@@ -28,6 +28,7 @@ const githubEditUrl = `${GITHUB_EDIT_URL}/${currentFile}`;
 		<title>
 			{`${data.title} 🚀 ${SITE.title}`}
 		</title>
+		<link href="/prism-nord.css" rel="stylesheet" />
 		<style>
 			body {
 				width: 100%;
@@ -40,10 +41,9 @@ const githubEditUrl = `${GITHUB_EDIT_URL}/${currentFile}`;
 			.layout {
 				display: grid;
 				grid-auto-flow: column;
-				grid-template-columns: minmax(var(--gutter), 1fr) minmax(0, var(--max-width)) minmax(
-						var(--gutter),
-						1fr
-					);
+				grid-template-columns:
+					minmax(var(--gutter), 1fr) minmax(0, var(--max-width))
+					minmax(var(--gutter), 1fr);
 				overflow-x: hidden;
 			}
 
@@ -126,12 +126,23 @@ const githubEditUrl = `${GITHUB_EDIT_URL}/${currentFile}`;
 				<LeftSidebar currentPage={currentPage} />
 			</aside>
 			<div id="grid-main">
-				<PageContent title={data.title} headings={headings} githubEditUrl={githubEditUrl}>
+				<PageContent
+					title={data.title}
+					headings={headings}
+					githubEditUrl={githubEditUrl}
+				>
 					<slot />
 				</PageContent>
 			</div>
-			<aside id="grid-right" class="grid-sidebar" title="Table of Contents">
-				<RightSidebar headings={headings} githubEditUrl={githubEditUrl} />
+			<aside
+				id="grid-right"
+				class="grid-sidebar"
+				title="Table of Contents"
+			>
+				<RightSidebar
+					headings={headings}
+					githubEditUrl={githubEditUrl}
+				/>
 			</aside>
 		</main>
 		<Footer path={currentFile} />
